[package]
name = "async-std-hang-repro"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = { version = "0.14", default-features = false, features = ["stream"] }
# tokio = { version = "1", default-features = false }
hyperlocal = "0.8"
env_logger = "0.8.1"
log = "0.4.11"
tracing-subscriber = "0.2.14"
async-std = "1.6.5"

[patch.crates-io]
# A fork of the hyperlocal crate with async-std network types.
hyperlocal = { git = "https://github.com/pandaman64/hyperlocal.git", branch = "async-std" }